# core-jiuwen

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  Untitled.ipynb  pyproject.toml
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/jiuwen/api/: agent.rst  auto-harness.rst  foundation.rst  graph.rst  harness.rst  index.rst  security.rst  teams.rst  tool.rst  workflow.rst
docs/jiuwen/examples/: component-example.rst  condition-example.rst  context-engine-example.rst  extra-components-example.rst  harness-example.rst  index.rst  integration-example.rst  llm-component-example.rst  llm-example.rst  rails-example.rst  security-example.rst  task-loop-example.rst  teams-example.rst
docs/jiuwen/notes/: agent-philosophy.rst  auto-harness-philosophy.rst  component-philosophy.rst  context-engine-philosophy.rst  extra-components-philosophy.rst  graph-philosophy.rst  index.rst  llm-component-philosophy.rst  llm-foundation-philosophy.rst  react-agent-philosophy.rst  teams-philosophy.rst  tool-system-philosophy.rst  workflow-philosophy.rst
docs/jiuwen/tutorials/: agent-teams-tutorial.rst  auto-harness-tutorial.rst  index.rst  (+1 more)
jiuwen/: __init__.py
jiuwen/auto_harness/: __init__.py  contexts.py  experience.py  fix_loop.py  learnings_stage.py  orchestrator.py  pipeline.py  registry.py  session_pipeline.py  stages.py
jiuwen/core/: __init__.py
jiuwen/harness/: __init__.py  deep_agent.py  factory.py
tests/: __init__.py  conftest.py
tests/unit_tests/: __init__.py
(+447 files in other folders)
