[project]
name = "jiuwen"
version = "0.0.1"
description = "jiuwen is an educational reproduction of an AI agent SDK for developing, running, and improving AI agents."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
]

[tool.setuptools.packages.find]
include = ["jiuwen*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["-v"]

[tool.ruff]
line-length = 120
target-version = "py311"
